--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Website!!
-description: this is a website. up in time for New Year's hehe
+title: Jakin Ng
+description: Personal website
